--- a/src/styles/global.module.scss
+++ b/src/styles/global.module.scss
@@ -1,11 +1,12 @@
-@import '@styles/constants.scss';
+@import '@styles/colors.scss';
+@import '@styles/sizes.scss';
 
 body{
 	font-weight: 300;
 	font-size: 20px;
 	line-height: 41px;
 	font-family: "Poppins";
-	background-color: $black;
+	background-color: $BLACK;
 }
 
 .wrapper {
@@ -14,7 +15,7 @@ body{
 }
 
 .container {
-	max-width: $containerWidth;
+	max-width: $CONTAINER_WIDTH;
 	margin: 0 auto;
 	padding: 0 15px;
 	box-sizing: border-box;
