--- a/src/styles/sizes.scss
+++ b/src/styles/sizes.scss
@@ -2,4 +2,7 @@ $CONTAINER_WIDTH: 1456px;
 
 $SMALL_DESKTOP: 1110px;
 $NORMAL_TABLET: 820px;
-$SMALL_TABLET: 650px;
+$SMALL_TABLET: 680px;
+
+$LARGE_PHONE: 490px;
+$NORMAL_PHONE: 420px;
