--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -3,6 +3,7 @@ $BLACK: #030304;
 $LIGHT_GREEN: #a3dc00;
 $LIGHT_GREEN_MEDIUM: #aedf23;
 $DARK_GREEN: #00ce2c;
+$LAST_UPDATED_GREEN: #00BC4F;
 $BANNER_GREEN: #24794045;
 $GRAY: #898989;
 $LIGHT_GRAY: #D9D9D9;
