feat: add currencyCard ui component

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -11,6 +11,7 @@ $BLUR: #185CFF;
 $BLUE_GRAY: #607D94;
 $CURRENCY_CARD_BACK: #202025;
 $CURRENCY_CARD_STROKE: #474747;
+$CURRENCY_CARD_GRAY: #A7B2C3;
 $TIMELINE_RED: #EA3943;
 $TIMELINE_GREEN: #16C782;
 $TIMELINE_ORANGE: #FF971D;
