--- a/src/styles/sizes.scss
+++ b/src/styles/sizes.scss
@@ -1,8 +1,11 @@
 $CONTAINER_WIDTH: 1456px;
 
-$SMALL_DESKTOP: 1110px;
-$NORMAL_TABLET: 820px;
+$SMALL_DESKTOP: 1150px;
+
+$LARGE_TABLET: 985px;
+$NORMAL_TABLET: 840px;
+$MEDIUM_TABLET: 750px;
 $SMALL_TABLET: 680px;
 
 $LARGE_PHONE: 490px;
-$NORMAL_PHONE: 420px;
+$NORMAL_PHONE: 430px;
