refactor: use margin/padding-(top|right|bottom|left) properties where only 1 value is changed

--- a/src/components/footer/style.module.scss
+++ b/src/components/footer/style.module.scss
@@ -13,20 +13,20 @@
 
 	.main {
 		display: flex;
-		margin: 0 0 50px 0;
+		margin-bottom: 50px;
 
 		&__descr{
 			flex: 0 1 470px;
-			margin: 0 120px 0 0;
+			margin-right: 120px;
 		}
 
 		&__title{
 			display: flex;
 			align-items: center;
-			margin: 0 0 30px 0;
+			margin-bottom: 30px;
 
 			h4{
-				padding: 0 0 0 30px;
+				padding-left: 30px;
 				font-weight: 600;
 				font-size: 26px;
 				background: linear-gradient(92deg, $DARK_GREEN 0%, $LIGHT_GREEN_MEDIUM 49.26%, $LIGHT_GREEN 100%);
@@ -54,12 +54,12 @@
 
 			h4{
 				font-size: 28px;
-				margin: 0 0 40px 0;
+				margin-bottom: 40px;
 			}
 		}
 
 		&__menuItem {
-			margin: 0 0 28px 0;
+			margin-bottom: 28px;
 			cursor: pointer;
 			
 			a{
@@ -101,7 +101,7 @@
 					transform: scale(0.8);
 				}
 				h4 {
-					padding: 0 0 0 20px;
+					padding-left: 20px;
 					font-size: 30px;
 				}
 			}
@@ -123,10 +123,10 @@
 		}
 
 		.main {
-			margin: 0 0 35px 0;
+			margin-bottom: 35px;
 
 			&__descr {
-				margin: 0 0 50px 0;
+				margin-bottom: 50px;
 			}
 
 			&__title {
@@ -146,12 +146,12 @@
 			&__menu {
 				h4 {
 					font-size: 24px;
-					margin: 0 0 35px 0;
+					margin-bottom: 35px;
 				}
 			}
 
 			&__menuItem {
-				margin: 0 0 25px 0;
+				margin-bottom: 25px;
 				a {
 					font-size: 20px;
 				}
@@ -167,7 +167,7 @@
 			align-items: stretch;
 
 			&__descr{
-				margin: 0 0 35px 0;
+				margin-bottom: 35px;
 			}
 
 			&__text {
@@ -237,7 +237,7 @@
 
 			&__menu	h4.active ~ .main__itemsWrapper{
 				max-height: 120px;
-				padding: 20px 0 0 0;
+				padding-top: 20px;
 			}
 
 			&__itemsWrapper {
@@ -259,8 +259,7 @@
 		.main {
 			
 			&__descr {
-				margin: 0 0 25px 0;
-
+				margin-bottom: 25px;
 			}
 
 			&__title {
@@ -270,7 +269,7 @@
 		
 				h4 {
 					font-size: 22px;
-					padding: 0 0 0 7px;
+					padding-left: 7px;
 				}
 			}
 
@@ -282,6 +281,7 @@
 
 			&__menuItem {
 				margin: 0 0 20px 0;
+				margin-bottom: 20px;
 
 				a {
 					font-size: 18px;
