--- a/src/components/banner/style.module.scss
+++ b/src/components/banner/style.module.scss
@@ -22,7 +22,7 @@
 		background: linear-gradient(92deg, $DARK_GREEN 0%, $LIGHT_GREEN_MEDIUM 49.26%, $LIGHT_GREEN 100%);
 		background-clip: text;
 		-webkit-text-fill-color: transparent;
-		padding: 0 64px 0 0;
+		padding-right: 64px;
 	}
 
 	&__title{
@@ -32,7 +32,7 @@
 
 	&__subtitle{
 		font-size: 90px;
-		margin: 0 0px 30px 0;
+		margin-bottom: 30px;
 	}
 
 	&__label {
@@ -47,7 +47,7 @@
 
 	&__logo{
 		width: 300px;
-		margin: 0 0 0 10px;
+		margin-left: 10px;
 
 		img{
 			width: 100%;
@@ -66,11 +66,11 @@
 		&__subtitle {
 			text-align: center;
 			padding: 0;
-			margin: 0 0 20px 0;
+			margin-bottom: 20px;
 		}
 
 		&__subtitle{
-			margin: 0 0 30px 0;
+			margin-bottom: 30px;
 		}
 
 		&__logo {
@@ -107,7 +107,7 @@
 
 		&__title{
 			line-height: 60px;
-			margin: 0 0 10px 0;
+			margin-bottom: 10px;
 		}
 		
 		&__label {
