--- a/src/components/currenciesSection/style.module.scss
+++ b/src/components/currenciesSection/style.module.scss
@@ -1,11 +1,11 @@
 @import '@styles/sizes.scss';
 
 .currencies{
-	margin: 0 0 50px 0
+	margin-bottom: 50px;
 }
 
 @media screen and (max-width: $NORMAL_TABLET) {
 	.currencies {
-		margin: 0 0 40px 0
+		margin-bottom: 40px;
 	}
 }
