--- a/src/components/header/style.module.scss
+++ b/src/components/header/style.module.scss
@@ -147,7 +147,7 @@
 			background-color: $BLACK;
 			flex-direction: column;
 			justify-content: flex-start;
-			padding: 160px 0 0 0;
+			padding-top: 160px;
 
 			&.active{
 				left: 0;
@@ -155,7 +155,7 @@
 		}
 
 		&__menu {
-			padding: 30px 0 0 0 ;
+			padding-top: 30px;
 			flex-direction: column;
 			order: 1;
 			text-align: center;
