--- a/src/ui/currencyCard/style.module.scss
+++ b/src/ui/currencyCard/style.module.scss
@@ -3,7 +3,7 @@
 
 .card{
 	padding: 0 30px;
-	margin: 0 0 55px 0;
+	margin-bottom: 55px;
 	flex: 1 1 50%;
 
 	&__inner{
@@ -32,19 +32,19 @@
 	}
 
 	&__info{
-		padding: 0 0 0 30px;
+		padding-left: 30px;
 	}
 
 	&__title{
 		font-size: 32px;
 		color: $LIGHT_GRAY;
-		margin: 0 0 15px 0;
+		margin-bottom: 15px;
 	}
 
 	&__text{
 		font-size: 26px;
 		color: $CURRENCY_CARD_GRAY;
-		padding: 0 0 2px 0;
+		padding-bottom: 2px;
 	}
 }
 
@@ -62,7 +62,7 @@
 		&__info {
 			display: flex;
 			flex-direction: column;
-			padding: 0 0 0 15px;
+			padding-left: 15px;
 		}
 
 		&__img {
@@ -86,7 +86,7 @@
 @media screen and (max-width: $LARGE_TABLET) {				
 	.card {
 		padding: 0 20px;
-		margin: 0 0 40px 0;
+		margin-bottom: 40px;
 
 		&__inner {
 			padding: 22px 20px;
@@ -111,7 +111,7 @@
 @media screen and (max-width: $NORMAL_TABLET) {
 	.card {
 		padding: 0 15px;
-		margin: 0 0 30px 0;
+		margin-bottom: 30px;
 
 		&__inner {
 			padding: 18px;
