--- a/src/ui/lastUpdated/style.module.scss
+++ b/src/ui/lastUpdated/style.module.scss
@@ -9,7 +9,7 @@
 	&__text{
 		font-size: 32px;
 		position: relative;
-		padding: 0 0 0 60px;
+		padding-left: 60px;
 
 		&::before,
 		&::after{
@@ -55,7 +55,7 @@
 	.lastUpdated {
 		&__text {
 			font-size: 20px;
-			padding: 0 0 0 45px;
+			padding-left: 45px;
 
 			&::before {
 				top: 0px;
