--- a/src/ui/title/style.module.scss
+++ b/src/ui/title/style.module.scss
@@ -6,7 +6,7 @@
 	font-weight: 300;
 	padding: 25px 0;
 	border-bottom: 2px solid $CURRENCY_CARD_STROKE;
-	margin: 0 0 50px 0;
+	margin-bottom: 50px;
 	width: calc(50% - 30px);
 }
 
@@ -19,7 +19,7 @@
 @media screen and (max-width: $NORMAL_TABLET) {
 	.title {
 		font-size: 24px;
-		margin: 0 0 40px 0;
+		margin-bottom: 40px;
 		padding: 20px 0;
 	}
 }
