--- a/src/ui/input/style.module.scss
+++ b/src/ui/input/style.module.scss
@@ -8,6 +8,7 @@
 	border-radius: 10px;
 	color: $WHITE;
 	font-weight: 300;
+	width: 100%;
 
 	&:focus{
 		box-shadow: 0 0 20px rgba($LIGHT_GRAY, 0.4);
