--- a/src/ui/input/style.module.scss
+++ b/src/ui/input/style.module.scss
@@ -1,4 +1,5 @@
 @import '@styles/colors.scss';
+@import '@styles/sizes.scss';
 
 .input{
 	background-color: $CURRENCY_CARD_BACK;
@@ -12,5 +13,12 @@
 
 	&:focus{
 		box-shadow: 0 0 20px rgba($LIGHT_GRAY, 0.4);
+	}
+}
+
+@media screen and (max-width: $SMALL_TABLET) {
+	.input {
+		padding: 13px;
+		font-size: 18px;
 	}
 }
