--- a/src/styles/sizes.scss
+++ b/src/styles/sizes.scss
@@ -6,6 +6,7 @@ $LARGE_TABLET: 985px;
 $NORMAL_TABLET: 840px;
 $MEDIUM_TABLET: 750px;
 $SMALL_TABLET: 680px;
+$EXTRA_SMALL_TABLET: 620px;
 
 $LARGE_PHONE: 490px;
 $NORMAL_PHONE: 430px;
