--- a/src/components/chartForm/style.module.scss
+++ b/src/components/chartForm/style.module.scss
@@ -1,6 +1,7 @@
 @import '@styles/sizes.scss';
 
 .form{
+	margin-top: 100px;
 	display: flex;
 	flex-direction: column;
 
@@ -11,8 +12,37 @@
 	.buttons{
 		align-self: flex-end;
 
+		&.first {
+			margin-bottom: 40px;
+		}
+
 		&>*:not(:last-child){
 			margin-right: 40px;
+		}
+	}
+}
+
+@media screen and (max-width: $NORMAL_TABLET) {
+	.form {
+		.buttons {
+			&.first{
+				align-self: stretch;
+				display: flex;
+				flex-wrap: wrap;
+				justify-content: space-between;
+			
+				button {
+					min-width: 265px
+				}
+			
+				&>* {
+					flex: 1 1 100%;
+				}
+			
+				&>*:not(:last-child) {
+					margin: 0 0 30px 0;
+				}
+			}
 		}
 	}
 }
