--- a/src/components/chartForm/style.module.scss
+++ b/src/components/chartForm/style.module.scss
@@ -40,7 +40,7 @@
 				}
 			
 				&>*:not(:last-child) {
-					margin: 0 0 30px 0;
+					margin-bottom: 30px;
 				}
 			}
 		}
@@ -64,7 +64,7 @@
 		}
 
 		&>*:not(:last-child) {
-			margin: 0 0 30px 0;
+			margin-bottom: 30px;
 		}
 	}
 	}
