--- a/src/components/errorBoundary/style.module.scss
+++ b/src/components/errorBoundary/style.module.scss
@@ -1,3 +1,5 @@
+@import '@styles/colors.scss';
+
 .errorBoundary{
 	margin: auto;
 	
@@ -6,13 +8,26 @@
 
 		.text {
 			font-size: 20px;
-			margin: 0 0 60px 0;
+			margin-bottom: 80px;
 		}
 
 		.title {
 			font-size: 55px;
 			font-weight: 700;
-			margin: 0 0 60px 0;
+			margin-bottom: 60px;
+		}
+
+		.link{
+			background-color: $LIGHT_GREEN;
+			color: $BLACK;
+			font-size: 24px;
+			padding: 20px 30px;
+			border-radius: 10px;
+			transition: all 0.3s ease;
+
+			&:hover{
+				background-color: $DARK_GREEN;
+			}
 		}
 	}
 }
