--- a/src/ui/currencyCard/style.module.scss
+++ b/src/ui/currencyCard/style.module.scss
@@ -12,7 +12,7 @@
 		border: 1px solid $CURRENCY_CARD_STROKE;
 		border-radius: 10px;
 		transition: all 0.3s ease;
-
+  
 		&:hover{
 			transform: scale(1.02);
 			box-shadow: 0 0 20px rgba($LIGHT_GRAY, 0.4);
@@ -132,5 +132,24 @@
 			overflow: hidden;
 			text-overflow: ellipsis;
 		}
+	}
+}
+
+.card.light {
+	.card__inner {
+		background-color: $LIGHT_GRAY;
+		border: 1px solid $CURRENCY_CARD_GRAY;
+
+		&:hover {
+			box-shadow: 0 0 20px rgba($GRAY, 0.4);
+		}
+	}
+
+	.card__title {
+		color: $BLACK;
+	}
+
+	.card__text {
+		color: $GRAY;
 	}
 }
