--- a/src/ui/switcher/style.module.scss
+++ b/src/ui/switcher/style.module.scss
@@ -31,6 +31,10 @@
 		border: 2px solid $LIGHT_GREEN;
 	}
 
+	input:hover~&__button {
+		background-color: $LIGHT_GREEN;
+	}
+
 	&__body, &__button {
 		display: block;
 		height: 25px;
